--- a/mobile/header.html
+++ b/mobile/header.html
@@ -20,7 +20,7 @@
 					</li>
 					<li>
 						<!--HOME BUTTON -->
-						<a href="#main" class="					ui-btn ui-btn-inline ui-icon-home    ui-btn-icon-right ui-corner-all " data-transition="flow"  data-direction="reverse">START</a>
+						<a href="#page-logged-in-menu" class="					ui-btn ui-btn-inline ui-icon-home    ui-btn-icon-right ui-corner-all " data-transition="flow"  data-direction="reverse">START</a>
 						<br>
 						<!--PAGE NEXT BUTTON -->
 						<a  class="gutaus-btn-next ui-btn ui-corner-all " data-transition="flip" data-theme="b" data-icon="check" data-iconpos="right">Weiter</a>
